--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.116.1",
     "mariadb>=1.1.13",
+    "python-jose[cryptography]>=3.5.0",
     "requests>=2.32.5",
 ]
